test/functions/export/exportGenericArgs.chpl
export proc typeArg(x: int, type t) {
}

export proc paramArg(x: int, param p: int) {
}

export proc noType(x: int, y) {
}

export proc queryType(x: int, y: ?t) {
}

export proc twoGenerics(type t, param p: int) {
}
